--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.50.1",
+    "swiper": "^8.1.3",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
